Added warning message when javascript is disabled.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,6 +11,11 @@
   <title>RUP Hump</title>
 </head>
 <body>
+  <noscript>
+    <div id='js-noscript-warning' class='warning'>
+      This page depends on JavaScript to draw some cool area charts. Enable JavaScript in your web browser by following <a href='http://www.enable-javascript.com' target='_blank' class='external-link'>these instructions</a>.
+    </div>
+  </noscript>
   <h1 class='header'>RUP Hump Generator</h1>
 
   <div class='content'>
