--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -31,6 +31,20 @@ body {
   padding-bottom: 70px;
 }
 
+.warning {
+  padding: 7px 10px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #AE0000;
+
+  .external-link {
+    color: #fff;
+    text-decoration: underline;
+  }
+}
+
 .chart-container {
   margin: 0 auto 60px auto;
 }
