--- a/views/home.erb
+++ b/views/home.erb
@@ -1,5 +1,5 @@
 <div class='input-container'>
-  <input type='file' id='js-input' class='input'>
+  <input type='file' id='js-input' class='input' style='display: none;'>
 </div>
 
 <div id='js-chart-container' class='chart-container'></div>
